--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Content/story-style.css
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Content/story-style.css
@@ -1,7 +1,66 @@
-﻿.create-story-field {
-    width: 100% !important;
+﻿#titleVali{
+    display:none;
+
 }
-input {
-    resize: none;
-    resize: vertical;
+#bodyVali {
+    display: none;
+}
+#title, #tags{
+    width: 100% !important;
+    max-width: 100% !important;
+}
+#title, #searchBar {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    display: inline-block;
+    padding: 4px 6px;
+    color: #555;
+    vertical-align: middle;
+    border-radius: 4px;
+    width: 100% !important;
+    line-height: 22px;
+    cursor: text;
+}
+#title:focus {
+    outline:none;
+}
+#searchBar {
+    max-width: 85% !important;
+}
+.btnDiv .btn, #searchBtn {
+    padding: 3px 30px;
+    font-size: 12px;
+    border-radius: 4px;
+    margin:2px;
+}
+p a:hover{
+    color: white;
+    text-decoration: none
+}
+.cancelBtn{
+    color:white;
+}
+a.cancelBtn:hover { 
+    color: white ;
+}
+
+
+a.btn:hover {
+    text-decoration: none;
+}
+a.btn:link {
+    text-decoration: none;
+}
+a.btn:active {
+    text-decoration: none;
+}
+a.btn {
+    text-decoration: none;
+}
+#details div{
+    font-size:17px;
+}
+#details span{
+    font-size:15px;
 }
