--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -4,21 +4,21 @@
     Layout = "";
 }
 
-@using (Html.BeginForm("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.parentID, Model.parentType), FormMethod.Post,null))
+@using (Html.BeginForm("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.parentID, Model.parentType), FormMethod.Post, null))
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="d-flex collapse">
-        <div class="p-1">
-            @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control", @placeholder = "What's on your mind?" } })
-            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
-        </div>
-        <div class="p-1">
-            <input type="button" onclick="this.form.submit();" value="Post" class="btn btn-default" />
+        <div class="d-flex collapse">
+            <div class="p-1">
+                @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control comment-field", @placeholder = "What's on your mind?" } })
+                @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+            </div>
+            <div class="p-1">
+                <input type="button" onclick="this.form.submit();" value="Post" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
