--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_TagField.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_TagField.cshtml
@@ -2,8 +2,8 @@
 
 
 <div class="form-group">
-    <p>Tags: </p>
+    <h5>Tags: </h5>
     <div>
-        <input name="tagsinput" type="text" data-role="tagsinput" class="create-story-field" />
+        <input id="tags"name="tagsinput" type="text" data-role="tagsinput" />
     </div>
 </div>
