--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
@@ -9,45 +9,48 @@
 <br />
 <h2>Stories</h2>
 <!---search partial view-->
-@Html.Partial("~/Views/Shared/_SearchBar.cshtml")
-
-<div class="btnDiv">
-    @Html.ActionLink("Create New", "CreateStory", null, new { @class = "btn btn-outline-primary" })
- </div>
-
-<!---display stories-->
-@foreach (var item in Model)
+@using (Html.BeginForm("Stories", "Story", FormMethod.Get, new { id = "searchForm" }))
 {
-    <div class="card" style="max-width: 70rem;">
-        <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">
-            <div class="card-header">
-                <img src="@Url.Action("retrieveUserPic", "Story", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
-                <div style="height:5rem; padding-top:30px; padding-left:100px;">
-                    <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
-                    <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
-                </div>
-            </div>
-            <div class="card-body">
-                <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                <div class="card-text">@Html.Raw(item.body)</div>
-            </div>
-            <div class="card-footer">
-                <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">Read More</a>
-                <a href="#" class="card-link">Share</a>
-            </div>
-        </a>
+    @Html.Partial("~/Views/Shared/_SearchBar.cshtml")
+}
+
+    <div class="btnDiv">
+        @Html.ActionLink("Create New", "CreateStory", null, new { @class = "btn btn-outline-primary" })
     </div>
 
+    <!---display stories-->
+    @foreach (var item in Model)
+    {
+        <div class="card" style="max-width: 70rem;">
+            <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">
+                <div class="card-header">
+                    <img src="@Url.Action("retrieveUserPic", "Story", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
+                    <div style="height:5rem; padding-top:30px; padding-left:100px;">
+                        <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
+                    <div class="card-text">@Html.Raw(item.body)</div>
+                </div>
+                <div class="card-footer">
+                    <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">Read More</a>
+                    <a href="#" class="card-link">Share</a>
+                </div>
+            </a>
+        </div>
 
-    <br />
 
-}
-<!---paging link with search and option-->
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-@Html.PagedListPager(Model, page => Url.Action("Stories", new { page, option = ViewBag.option, search = ViewBag.search }))
+        <br />
 
-@section Scripts
+    }
+    <!---paging link with search and option-->
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Stories", new { page, option = ViewBag.option, search = ViewBag.search }))
+
+    @section Scripts
 {
-    <link href="~/Content/story-style.css" rel="stylesheet">
-    <script type="text/javascript" src="~/Scripts/search.js"></script>
-}
+        <link href="~/Content/story-style.css" rel="stylesheet">
+        <script type="text/javascript" src="~/Scripts/search.js"></script>
+    }
