--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
@@ -4,7 +4,11 @@
 
 <h2>About us</h2>
 <br />
+<img src="https://images.unsplash.com/photo-1522756890800-ac12d130a43f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="" style="width:1000px;height:500px;">
+<br />
+<br />
 <h4>MISSION</h4>
+
 <p>
     We're an organisation promoting a healthier community by providing you a platform
     with resources to aid smokers in their efforts to quit smoking. There will be
