--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -1,5 +1,4 @@
-﻿@model SmokeFreeApplication.Models.Article
-
+﻿
 @{
     ViewBag.Title = "createArticle";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,7 +8,7 @@
 
 <h1>Create an Article</h1>
 
-
+@model SmokeFreeApplication.Models.Article
 @using (Html.BeginForm("createArticle", "Article", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
@@ -19,7 +18,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        <p>Title: </p>
+        <h5>Title: </h5>
         <div>
             @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-article-field" } })
             @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
@@ -27,16 +26,19 @@
     </div>
 
     <div class="form-group">
-        <p>Description: </p>
+        <h5>Description: </h5>
         <div>
-            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-article-field" } })
-            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
+            <span id="bodyVali" class="badge badge-danger">Please enter the article description that has at least 500 characters!</span>
         </div>
     </div>
+
     <div class="form-group">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.articlePicture)</label>
-        <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
+            <h5>Upload Article Image </h5>
+            <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.articlePicture)</label>
+            <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
     </div>
+
     @Html.Partial("~/Views/Shared/_TagField.cshtml")
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
