--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/Manage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/Manage.cshtml
@@ -12,6 +12,11 @@
 
     bool activeSearch = Model.Count() > 1;
 
+    if (String.IsNullOrEmpty(ViewBag.activeTabContent))
+    {
+        ViewBag.activeTabContent = "Pending Article";
+    }
+
     if (activeSearch)
     {
         searchArticleList = Model.Last().list1;
@@ -84,7 +89,7 @@
 
 
 <div class="tab">
-    @if (!activeSearch)
+    @if (!activeSearch && ViewBag.activeTabContent == "Pending Article")
     {
         <button class="tablinks active" onclick="openTab(event, 'Pending Article')">Pending Article</button>
     }
@@ -93,16 +98,36 @@
         <button class="tablinks " onclick="openTab(event, 'Pending Article')">Pending Article</button>
     }
 
-    <button class="tablinks" onclick="openTab(event, 'Approved Article')">Approved Article</button>
-    <button class="tablinks" onclick="openTab(event, 'Pending Doctor')">Pending Doctor</button>
-    <button class="tablinks" onclick="openTab(event, 'Approved Doctor')">Approved Doctor</button>
-    @if (activeSearch)
+    @if (ViewBag.activeTabContent == "Approved Article")
     {
-        <button class="tablinks active" onclick="openTab(event, 'Search Result')">Search Result</button>
+        <button class="tablinks active" onclick="openTab(event, 'Approved Article')">Approved Article</button>
     }
     else
     {
-       // <button class="tablinks" onclick="openTab(event, 'Search Result')">Search Result</button>
+        <button class="tablinks" onclick="openTab(event, 'Approved Article')">Approved Article</button>
+    }
+
+    @if (ViewBag.activeTabContent == "Pending Doctor")
+    {
+        <button class="tablinks active" onclick="openTab(event, 'Pending Doctor')">Pending Doctor</button>
+    }
+    else
+    {
+        <button class="tablinks" onclick="openTab(event, 'Pending Doctor')">Pending Doctor</button>
+    }
+
+    @if (ViewBag.activeTabContent == "Approved Doctor")
+    {
+        <button class="tablinks active" onclick="openTab(event, 'Approved Doctor')">Approved Doctor</button>
+    }
+    else
+    {
+        <button class="tablinks" onclick="openTab(event, 'Approved Doctor')">Approved Doctor</button>
+    }
+
+    @if (activeSearch)
+    {
+        <button class="tablinks active" onclick="openTab(event, 'Search Result')">Search Result</button>
     }
 
 </div>
@@ -131,59 +156,56 @@
     </div>
 }
 
-@if (!activeSearch)
+@helper DisplayArticleList(IEnumerable<SmokeFreeApplication.Models.Article> articleList,string articleStatus)
+{
+    <div class="list-group">
+        @foreach (var item in articleList)
+        {
+            if (articleStatus == item.articleStatus)
+            {
+                @DisplayArticle(item);
+            }
+        }
+    </div>
+}
+
+@*
+    Should have a better way to swtch this none and block display more efficently than this way
+*@
+@if (!activeSearch && ViewBag.activeTabContent == "Pending Article")
 {
     <div id="Pending Article" class="tabcontent" style="display:block;">
-        <div class="list-group">
-            @foreach (var item in articleList)
-            {
-                if ("pending" == item.articleStatus)
-                {
-                    @DisplayArticle(item);
-                }
-            }
-        </div>
+        @DisplayArticleList(articleList,"pending")
     </div>
 }
 else
 {
     <div id="Pending Article" class="tabcontent" style="display:none;">
-        <div class="list-group">
-            @foreach (var item in articleList)
-            {
-                if ("pending" == item.articleStatus)
-                {
-                    @DisplayArticle(item);
-                }
-            }
-        </div>
+        @DisplayArticleList(articleList, "pending")
     </div>
 }
 
 
-
-<div id="Approved Article" class="tabcontent" style="display: none;">
-
-    <div class="list-group">
-        @foreach (var item in articleList)
-        {
-            if ("approved" == item.articleStatus)
-            {
-                @DisplayArticle(item);
-            }
-        }
-
+@if (ViewBag.activeTabContent == "Approved Article")
+{
+    <div id="Approved Article" class="tabcontent" style="display: block;">
+        @DisplayArticleList(articleList, "approved")
     </div>
+}
+else
+{
+    <div id="Approved Article" class="tabcontent" style="display: none;">
+        @DisplayArticleList(articleList, "approved")
+    </div>
+}
 
-</div>
-
-<div id="Pending Doctor" class="tabcontent" style="display: none;">
-
+@helper DisplayDoctorList(IEnumerable<SmokeFreeApplication.Models.Doctor> doctorList,bool adminVerify)
+{
     <div class="list-group">
 
         @foreach (var item in doctorList)
         {
-            if (!item.adminVerify)
+            if (item.adminVerify == adminVerify)
             {
                 @DisplayDoctor(item);
             }
@@ -191,22 +213,37 @@ else
         }
 
     </div>
-</div>
+}
 
+
+@if (ViewBag.activeTabContent == "Pending Doctor")
+{
+    <div id="Pending Doctor" class="tabcontent" style="display: block;">
+        @DisplayDoctorList(doctorList,false)
+    </div>
+}
+else
+{
+    <div id="Pending Doctor" class="tabcontent" style="display: none;">
+
+        @DisplayDoctorList(doctorList, false)
+    </div>
+}
+
+
+@if (ViewBag.activeTabContent == "Approved Doctor")
+{
+<div id="Approved Doctor" class="tabcontent" style="display: block;">
+    @DisplayDoctorList(doctorList, true)
+</div>
+}
+else
+{
 <div id="Approved Doctor" class="tabcontent" style="display: none;">
-    <div class="list-group">
-
-        @foreach (var item in doctorList)
-        {
-            if (item.adminVerify)
-            {
-                @DisplayDoctor(item);
-            }
-
-        }
-
-    </div>
+    @DisplayDoctorList(doctorList, true)
 </div>
+}
+
 
 @if (activeSearch)
 {
@@ -220,14 +257,14 @@ else
                 }
             }
 
-            @if (searchDoctorList!=null)
+            @if (searchDoctorList != null)
             {
                 foreach (var doctor in searchDoctorList)
                 {
                     @DisplayDoctor(doctor);
                 }
             }
-            </div>
+        </div>
     </div>
 }
 else
@@ -249,7 +286,7 @@ else
                     @DisplayDoctor(doctor);
                 }
             }
-            </div>
+        </div>
     </div>
 
 }
@@ -269,6 +306,7 @@ else
         }
         document.getElementById(tabName).style.display = "block";
         evt.currentTarget.className += " active";
+
     }
 </script>
 
