--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
@@ -56,7 +56,7 @@
             @if (Session["docOrMember"] == "admin")
             {
                 <li class="nav-item nav-link">
-                    @Html.ActionLink("Boardcast", "BoardcastMessage", "Admin")
+                    @Html.ActionLink("Broadcast", "BroadcastMessage", "Admin")
 
                 </li>
             }
