--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
@@ -50,21 +50,17 @@
                                     <legend>
                                         Rejection Email
                                     </legend>
-
                                     @using (Html.BeginForm("RejectPost", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
                                     {
                                         @Html.HiddenFor(m => Model.model.articleID);
 
                                         @Html.ValidationSummary()
-                                        <p>From: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.From)</p>
-                                        <p>To: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.To)</p>
                                         <p>Subject: </p>
                                         <p>@Html.TextBoxFor(m => Model.emailModel.Subject)</p>
                                         <p>Body: </p>
                                         <p>@Html.TextAreaFor(m => Model.emailModel.Body)</p>
-                                        <input type="submit" value="Send" />
+                                        <input type="submit" class="btn btn-primary" value="Send" />
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                     }
 
                                 </fieldset>
