--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
@@ -54,15 +54,12 @@
                                     {
                                         @Html.HiddenFor(m => Model.model.userName);
                                         @Html.ValidationSummary()
-                                        <p>From: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.From)</p>
-                                        <p>To: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.To)</p>
                                         <p>Subject: </p>
                                         <p>@Html.TextBoxFor(m => Model.emailModel.Subject)</p>
                                         <p>Body: </p>
                                         <p>@Html.TextAreaFor(m => Model.emailModel.Body)</p>
-                                        <input type="submit" value="Send" />
+                                        <input type="submit" class="btn btn-primary" value="Send" />
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                     }
 
                                 </fieldset>
