--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
@@ -44,5 +44,5 @@
     <link href="~/Summernote/summernote-bs4.css" rel="stylesheet">
     <script type="text/javascript" src="~/Summernote/summernote-bs4.js"></script>
     <script type="text/javascript" src="~/Scripts/text-editor.js"></script>
-    <script type="text/javascript" src="~/Scripts/form-validation.js"></script>
+    <script type="text/javascript" src="~/Scripts/validation.js"></script>
 }
